--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,12 @@
   "action": {
     "default_popup": "popup.html"
   },
-  "permissions": ["storage"]
+  "permissions": [
+    "storage"
+  ],
+  "icons": {
+    "16": "common/icons/16x16.ico",
+    "48": "common/icons/48x48.ico",
+    "128": "common/icons/128x128.ico"
+  }
 }
