--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
     "default_popup": "popup.html"
   },
   "permissions": [
-    "storage"
+    "storage",
+    "tabs"
   ],
   "icons": {
    "16": "common/icons/yyq.png"
