--- a/manifest.json
+++ b/manifest.json
@@ -16,4 +16,5 @@
   "icons": {
    "16": "common/icons/yyq.png"
   }
+//  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
